# RealSense2ToPC

./: .project  CMakeLists.txt  README.RealSense2ToPC  README.md  RTC.xml  RealSense2ToPC.conf  RealSense2ToPCTest.bat  SetCommand.pyw  SetMode.pyw  TestRealSense2ToPC.bash  TestRealSense2ToPC.bat  rtc.conf
cmake/: realsense2topc-config.cmake.in  wix.xsl.in
cmake/Modules/: FindRealSense2.cmake
doc/: conf.py.in
doc/content/: index.txt  index_j.txt
include/: CMakeLists.txt
include/RealSense2ToPC/: CMakeLists.txt  RealSense2ToPC.h
real_sense_2_grabber/: real_sense_2_grabber.cpp  real_sense_2_grabber.h
src/: CMakeLists.txt  RealSense2ToPC.cpp  RealSense2ToPCComp.cpp
